<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonolds.geocam.CamFragment">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <ImageView
        android:id="@+id/backgroundcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/thumbnail" />

    <ImageView
        android:id="@+id/thumb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/your_pic"
        android:src="@android:color/holo_blue_dark"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/guidelineH88"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveMarker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/save_marker"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/guidelineH98"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guidelineV40"
        app:layout_constraintTop_toBottomOf="@id/guidelineH88" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/thumb"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@id/guidelineH98"
        app:layout_constraintLeft_toRightOf="@id/guidelineV40"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineH88" />


</android.support.constraint.ConstraintLayout>