<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonolds.geocam.MainActivity">





    <android.support.constraint.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />


    <android.support.constraint.Guideline
        android:id="@+id/guidelineH93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <ImageView
        android:id="@+id/thumb2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        app:srcCompat="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH35"
        app:layout_constraintLeft_toRightOf="@+id/guidelineV2"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV50"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH2"/>

    <Button
        android:id="@+id/camButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="takePic"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH50"
        app:layout_constraintLeft_toRightOf="@+id/guidelineV2"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV50"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH35" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openMap"
        android:text="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH50"
        app:layout_constraintLeft_toRightOf="@+id/guidelineV50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV98"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH35" />

    <Button
        android:id="@+id/latLong"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/longitude_latitude"
        android:onClick="setLatLong"
        app:layout_constraintLeft_toRightOf="@+id/guidelineV2"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV50"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH88"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH98" />


    <TextView
        android:id="@+id/latView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/guidelineV50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV98"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH88"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH93" />

    <TextView
        android:id="@+id/longView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/guidelineV50"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV98"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH93"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH98" />

    <fragment
        android:id="@+id/map_placeholder"
        class="com.jonolds.geocam.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/cam_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        />

</android.support.constraint.ConstraintLayout>
